Populate index.html
Fill index.html with all content, including structure.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-content">
+            <h4>Header Logo</h2>
+            <a>header link one</a>
+            <a>header link two</a>
+            <a>header link three</a>
+        </div>
+    </div>
+    <div class="first-content">
+        <div class="content-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="button">Sign up!</button>
+        </div>
+        <img>
+    </div>
+    <div class="second-content">
+        <h3>Some random information.</h3>
+        <div class="content-box">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="content-box">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="content-box">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="content-box">
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    <div class="third-content">
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-person">-Thor, God of Thunder</p>
+        </div>
+    </div>
+    <div class="fourth-content">
+        <div class="sign-up-content">
+            <div class="sign-up-left">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our products by clicking that button right over there!</p>
+            </div>
+            <button class="button">Sign up!</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p class="footer-text">Copyright © The Odin Project 2021</p>
+    </div>
 </body>
 </html>
