--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
         <div class="header-content">
-            <h4>Header Logo</h2>
+            <p>Header Logo</p>
             <a>header link one</a>
             <a>header link two</a>
             <a>header link three</a>
@@ -16,14 +17,14 @@
     </div>
     <div class="first-content">
         <div class="content-left">
-            <h1>This website is awesome</h1>
+            <p>This website is awesome</p>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button class="button">Sign up!</button>
         </div>
         <img>
     </div>
     <div class="second-content">
-        <h3>Some random information.</h3>
+        <p>Some random information.</p>
         <div class="content-box">
             <div class="box"></div>
             <p>this is some subtext under an illustration or image</p>
@@ -50,7 +51,7 @@
     <div class="fourth-content">
         <div class="sign-up-content">
             <div class="sign-up-left">
-                <h2>Call to action! It's time!</h2>
+                <p>Call to action! It's time!</p>
                 <p>Sign up for our products by clicking that button right over there!</p>
             </div>
             <button class="button">Sign up!</button>
