--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <p>Header Logo</p>
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
+            <p class="header-logo">Header Logo</p>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
         </div>
     </div>
     <div class="first-content">
         <div class="content-left">
-            <p>This website is awesome</p>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <p class="hero-main">This website is awesome</p>
+            <p class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button class="button">Sign up!</button>
         </div>
         <img>
     </div>
     <div class="second-content">
-        <p>Some random information.</p>
+        <p class="information-header">Some random information.</p>
         <div class="content-box">
             <div class="box"></div>
             <p>this is some subtext under an illustration or image</p>
@@ -44,7 +44,7 @@
     </div>
     <div class="third-content">
         <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="quote-person">-Thor, God of Thunder</p>
         </div>
     </div>
