Add image, style first-content

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         </div>
     </div>
     <div class="first-content">
-        <div class="content-left">
-            <p class="hero-main">This website is awesome</p>
-            <p class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button class="button">Sign up!</button>
+        <div class="first-container">
+            <div class="content-left">
+                <p class="hero-main">This website is awesome</p>
+                <p class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="button">Sign up!</button>
+            </div>
+            <img src="./images/image.jpg" alt="A random image" class="hero-image">
         </div>
-        <img>
     </div>
     <div class="second-content">
         <p class="information-header">Some random information.</p>
