--- a/index.html
+++ b/index.html
@@ -26,22 +26,34 @@
         </div>
     </div>
     <div class="second-content">
-        <p class="information-header">Some random information.</p>
-        <div class="content-box">
-            <div class="box"></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="information">
+            <p class="information-header">Some random information.</p>
         </div>
-        <div class="content-box">
-            <div class="box"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="content-box">
-            <div class="box"></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="content-box">
-            <div class="box"></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="box-container">
+            <div class="box-wrapper">
+                <div class="content-box">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="box-wrapper">
+                <div class="content-box">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="box-wrapper">
+                <div class="content-box">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+            <div class="box-wrapper">
+                <div class="content-box">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="third-content">
