Add html file to last commit

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
     <div class="fourth-content">
         <div class="sign-up-content">
             <div class="sign-up-left">
-                <p>Call to action! It's time!</p>
+                <p class="sign-up-header">Call to action! It's time!</p>
                 <p>Sign up for our products by clicking that button right over there!</p>
             </div>
-            <button class="button">Sign up!</button>
+            <div>
+                <button class="button">Sign up!</button>
+            </div>
         </div>
     </div>
     <div class="footer">
